[BUGFIX] Missing files break the plugin
When a file is missing, an outdated and unused piece of code was
unintentionally called that breaks on TYPO3 v8+. Instead of doing this,
the file should be visually marked as missing, e.g. with a
strikethrough.

--- a/Resources/Public/Css/frontend.css
+++ b/Resources/Public/Css/frontend.css
@@ -79,6 +79,10 @@
 }
 
 
+.tx-fileman a.file-not-found {
+	text-decoration: line-through;
+}
+
 .tx-fileman .file-type-info {
 	font-size:0.8em;
 	opacity:0.9;
